// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit multiple queries match at once 1`] = `
Array [
  Array [
    Array [
      "(min-height: 220)",
    ],
  ],
  Array [
    Array [
      "(min-height: 440)",
    ],
  ],
  Array [
    Array [
      "(min-height: 220)",
      "(min-height: 440)",
    ],
  ],
]
`;

exports[`Unit on and off works 1`] = `
Array [
  Array [
    Array [
      "(min-height: 220)",
    ],
  ],
  Array [
    Array [
      "(min-height: 220)",
    ],
  ],
]
`;

exports[`Unit triggers events on matched query list change 1`] = `
Array [
  Array [
    Array [
      "(min-height: 220)",
    ],
  ],
  Array [
    Array [],
  ],
  Array [
    Array [
      "(min-height: 220)",
    ],
  ],
]
`;
